# citra

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
hooks/: pre-commit
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  audio_core.cpp  audio_core.h  codec.cpp  codec.h  interpolate.cpp  interpolate.h  null_sink.h  sdl2_sink.cpp  sdl2_sink.h  sink.h  sink_details.cpp  time_stretch.cpp  time_stretch.h
src/audio_core/hle/: common.h  dsp.cpp  dsp.h  effects.cpp  effects.h  final.cpp  final.h  pipe.cpp  pipe.h  source.cpp  source.h
src/citra/: citra.cpp  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  citra-qt.aps  config.cpp  configure.ui  configure_audio.cpp  configure_audio.ui  configure_debug.ui  configure_general.ui  configure_graphics.cpp  configure_graphics.ui  configure_layout.cpp  configure_layout.ui  configure_system.ui  game_list.cpp  game_list_p.h  main.cpp  main.h  main.ui
src/citra_qt/debugger/: callstack.cpp  graphics_breakpoints.cpp  graphics_tracing.cpp  graphics_vertex_shader.cpp  profiler.cpp
src/common/: CMakeLists.txt  emu_window.cpp  emu_window.h  file_util.cpp  file_util.h  key_map.cpp  string_util.cpp  thread.h
src/common/logging/: backend.cpp  log.h
src/common/x64/: emitter.cpp  emitter.h
src/core/: CMakeLists.txt  core.cpp  memory.cpp  memory.h  settings.cpp  settings.h
src/core/file_sys/: archive_backend.cpp  disk_archive.cpp
src/video_core/: clipper.cpp  command_processor.cpp  pica.cpp  pica.h  pica_state.h  primitive_assembly.cpp  rasterizer.cpp  rasterizer_interface.h  vertex_loader.cpp  vertex_loader.h  video_core.cpp  video_core.h
(+80 files in other folders)
